# ava-ai-sales-assistant

./: .gitignore  .pylintrc  README.md  docker-compose.yml  playground.py  pyproject.toml
.github/workflows/: cd.yml  deploy.yml
.github/workflows_bkp/: cd.yml
app/: config.py  datamodel.py  main.py  old_main.py  security.py  streamlit_app.py
app/api/: ava.py  chat.py  lead_connector.py  oauth.py  webhook.py
app/ava/: ava.py  test_ava.py
app/ava/embeddings/: aoai_ada_002.py
app/ava/llm/: llama_index_llms.py
app/ava/retriever/: base_retriever.py  obj_handelling_retriever.py  utils.py
app/ava/utils/: google_drive_utils.py
app/integrations/: base_crm_integration.py  gohighlevel.py  leadconnector.py
app/integrations/lead_connector/: config.py  leadconnector.py  models.py  utils.py
app/prompt/: lead_engage_sms.txt  main_v1.txt  prompt_lead_engage.txt
app/services/: ava_service.py  azure_openai_service.py  base_message_service.py  lead_connector_messaging_service.py  message_service.py  weather_service.py
app/utils/: azure.py  env.py  load_env.py  utility.py
ava/: main.py
ava/utils/: llms.py
prompt/: main_v1.txt
tests/test_ava.py/: test_llms.py
tests/test_utils.py/: test_llms.py
