[tool.poetry]
name = "ava"
version = "0.1.0"
description = ""
authors = ["Karan Singh Kochar <pyrotank41@gmail.com>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
openai = "^1.35.7"
loguru = "^0.7.2"
llama-index = "^0.10.51"
llama-index-llms-azure-openai = "^0.1.8"
llama-index-llms-anthropic = "^0.1.15"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
