[tool.poetry]
name = "ava"
version = "0.1.0"
description = ""
authors = ["Karan Singh Kochar <pyrotank41@gmail.com>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.1"
openai = "^1.35.7"
loguru = "^0.7.2"
llama-index = "^0.10.51"
llama-index-llms-azure-openai = "^0.1.8"
llama-index-llms-anthropic = "^0.1.15"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
llama-index-vector-stores-qdrant = "^0.2.10"
llama-index-readers-file = "^0.1.25"
qdrant-client = "^1.9.2"
llama-index-readers-google = "^0.2.9"
llama-index-embeddings-azure-openai = "^0.1.10"
llama-index-postprocessor-cohere-rerank = "^0.1.7"
geopy = "^2.4.1"
timezonefinder = "^6.5.2"
pytz = "^2024.1"
azure-keyvault-secrets = "^4.8.0"
azure-storage-blob = "^12.21.0"
portkey-ai = "^1.7.2"
streamlit = "^1.37.1"



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
